syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.gmail.cristiandeives.myswitch.common.data.preferences.proto";
option java_multiple_files = true;

message AccessTokenProto {
  string access_token = 1;
  google.protobuf.Timestamp expiration_time = 2;
  string token_type = 3;
}